Add datasets to the database constructor

--- a/build_databases.ipynb
+++ b/build_databases.ipynb
@@ -10,12 +10,12 @@
     "\n",
     "Before you begin you will need to obtain a free api from Quandl: https://blog.quandl.com/getting-started-with-the-quandl-api\n",
     "\n",
-    "You will need the pandas and sqlalchemy libraries."
+    "You will need the quandl, pandas and sqlalchemy libraries."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -92,16 +92,24 @@
     "\n",
     "amex_nh = q.get(\"URC/AMEX_52W_HI\")\n",
     "amex_nl = q.get(\"URC/AMEX_52W_LO\")\n",
-    "ny_adv = q.get(\"URC/NYSE_ADV_VOL\")\n",
-    "ny_dec = q.get(\"URC/NYSE_DEC_VOL\")\n",
-    "nas_adv = q.get(\"URC/NASDAQ_ADV_VOL\")\n",
-    "nas_dec = q.get(\"URC/NASDAQ_DEC_VOL\")\n",
-    "am_adv = q.get(\"URC/AMEX_ADV_VOL\")\n",
-    "am_dec = q.get(\"URC/AMEX_DEC_VOL\")\n",
     "ny_nh = q.get(\"URC/NYSE_52W_HI\")\n",
     "ny_nl = q.get(\"URC/NYSE_52W_LO\")\n",
     "nas_nh = q.get(\"URC/NASDAQ_52W_HI\")\n",
-    "nas_nl = q.get(\"URC/NASDAQ_52W_LO\")"
+    "nas_nl = q.get(\"URC/NASDAQ_52W_LO\")\n",
+    "\n",
+    "ny_adv = q.get(\"URC/NYSE_ADV\")\n",
+    "ny_dec = q.get(\"URC/NYSE_DEC\")\n",
+    "nas_adv = q.get(\"URC/NASDAQ_ADV\")\n",
+    "nas_dec = q.get(\"URC/NASDAQ_DEC\")\n",
+    "am_adv = q.get(\"URC/AMEX_ADV\")\n",
+    "am_dec = q.get(\"URC/AMEX_DEC\")\n",
+    "\n",
+    "ny_adv_vol = q.get(\"URC/NYSE_ADV_VOL\")\n",
+    "ny_dec_vol = q.get(\"URC/NYSE_DEC_VOL\")\n",
+    "nas_adv_vol = q.get(\"URC/NASDAQ_ADV_VOL\")\n",
+    "nas_dec_vol = q.get(\"URC/NASDAQ_DEC_VOL\")\n",
+    "am_adv_vol = q.get(\"URC/AMEX_ADV_VOL\")\n",
+    "am_dec_vol = q.get(\"URC/AMEX_DEC_VOL\")"
    ]
   },
   {
@@ -115,16 +123,24 @@
     "# Write to db\n",
     "amex_nh.to_sql('amex_nh',engine)\n",
     "amex_nl.to_sql('amex_nl',engine)\n",
-    "ny_adv.to_sql('ny_adv',engine)\n",
-    "ny_dec.to_sql('ny_dec',engine)\n",
-    "nas_adv.to_sql('nas_adv',engine)\n",
-    "nas_dec.to_sql('nas_dec',engine)\n",
-    "am_adv.to_sql('am_adv',engine)\n",
-    "am_dec.to_sql('am_dec',engine)\n",
     "ny_nh.to_sql('ny_nh',engine)\n",
-    "ny_nl.to_sql('nh_nl',engine)\n",
+    "ny_nl.to_sql('ny_nl',engine)\n",
     "nas_nh.to_sql('nas_nh',engine)\n",
-    "nas_nl.to_sql('nas_nl',engine)"
+    "nas_nl.to_sql('nas_nl',engine)\n",
+    "\n",
+    "ny_adv_vol.to_sql('ny_adv_vol',engine)\n",
+    "ny_dec_vol.to_sql('ny_dec_vol',engine)\n",
+    "nas_adv_vol.to_sql('nas_adv_vol',engine)\n",
+    "nas_dec_vol.to_sql('nas_dec_vol',engine)\n",
+    "am_adv_vol.to_sql('am_adv_vol',engine)\n",
+    "am_dec_vol.to_sql('am_dec_vol',engine)\n",
+    "\n",
+    "ny_adv.to_sql('ny_adv',engine, if_exists='replace')\n",
+    "ny_dec.to_sql('ny_dec',engine, if_exists='replace')\n",
+    "nas_adv.to_sql('nas_adv',engine, if_exists='replace')\n",
+    "nas_dec.to_sql('nas_dec',engine, if_exists='replace')\n",
+    "am_adv.to_sql('am_adv',engine, if_exists='replace')\n",
+    "am_dec.to_sql('am_dec',engine, if_exists='replace')"
    ]
   },
   {
@@ -305,6 +321,171 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "vix = q.get(\"YAHOO/INDEX_VIX\")\n",
+    "vix.to_sql('vix',engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sp500 = q.get(\"YAHOO/INDEX_GSPC\")\n",
+    "sp500.to_sql('sp500',engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# S&P 500 PE Ratio by Month\n",
+    "\n",
+    "pe_ratio = q.get(\"MULTPL/SP500_PE_RATIO_MONTH\")\n",
+    "pe_ratio.to_sql('pe_ratio_sp500',engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Foriegn Indexes\n",
+    "europe = q.get(\"NASDAQOMX/XEX\")\n",
+    "asia = q.get(\"NASDAQOMX/NQASIA\")\n",
+    "brazil = q.get(\"NASDAQOMX/NQBRBRL\")\n",
+    "emerging_markets = q.get(\"NASDAQOMX/NQEM\")\n",
+    "global_ex_us = q.get(\"NASDAQOMX/NQGXUS\")\n",
+    "\n",
+    "europe.to_sql('europe',engine)\n",
+    "asia.to_sql('asia',engine)\n",
+    "brazil.to_sql('brazil',engine)\n",
+    "emerging_markets.to_sql('emerging_markets',engine)\n",
+    "global_ex_us.to_sql('global_ex_us',engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Index Value</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Total Market Value</th>\n",
+       "      <th>Dividend Market Value</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Trade Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2001-03-30</th>\n",
+       "      <td>305.29</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.777511e+11</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-04-02</th>\n",
+       "      <td>298.77</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.654079e+11</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-04-03</th>\n",
+       "      <td>291.56</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.517700e+11</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-04-04</th>\n",
+       "      <td>285.79</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.408362e+11</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-04-05</th>\n",
+       "      <td>288.15</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.453179e+11</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Index Value  High  Low  Total Market Value  Dividend Market Value\n",
+       "Trade Date                                                                   \n",
+       "2001-03-30       305.29   0.0  0.0        5.777511e+11                    0.0\n",
+       "2001-04-02       298.77   0.0  0.0        5.654079e+11                    0.0\n",
+       "2001-04-03       291.56   0.0  0.0        5.517700e+11                    0.0\n",
+       "2001-04-04       285.79   0.0  0.0        5.408362e+11                    0.0\n",
+       "2001-04-05       288.15   0.0  0.0        5.453179e+11                    0.0"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "emerging_markets.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
@@ -323,6 +504,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [Root]",
    "language": "python",
