fix: train_test_split() arguments. add: ability to print table of results for test()

--- a/learner.ipynb
+++ b/learner.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -57,8 +57,9 @@
     "        \n",
     "        assert len(states_df) == len(price_series), \"Length of price_series and states_df are not equal.\"        \n",
     "        \n",
-    "        self.states_train, self.states_test = self.train_test_split()\n",
+    "        self.states_df = states_df\n",
     "        self.price_series = price_series\n",
+    "        self.states_train, self.states_test = self.train_test_split()\n",
     "        # Instantiate with dummy states for parsimony of q_dict\n",
     "        self.curr_state = (0, 0, 0, 0, 0, 0, 1, 0)\n",
     "        self.prev_state = (0, 0, 0, 0, 0, 0, 1, 0)\n",
@@ -76,7 +77,10 @@
     "        self.max_test_time = len(self.states_test)\n",
     "        self.q_dict = build_q_dict(states_df)\n",
     "    \n",
-    "    def train_test_split(self, states_df=states_df, price_series=price_series, train_fraction=.8):\n",
+    "    def train_test_split(self, train_fraction=.8):\n",
+    "        states_df = self.states_df\n",
+    "        price_series = self.price_series\n",
+    "        \n",
     "        assert states_df.index.all() == price_series.index.all(), \\\n",
     "            \"All dates in the states_df must match all dates in the price_series\"\n",
     "        \n",
@@ -190,7 +194,7 @@
     "        n = 0\n",
     "        while n < n_trials:\n",
     "            t = 0\n",
-    "            print \"Training . . .\"\n",
+    "            print \"Training trial number {}...\".format(n)\n",
     "            while t < self.max_train_time:\n",
     "                self.update(t)        \n",
     "                t += 1\n",
@@ -199,7 +203,7 @@
     "            print \"The excess return is {}\".format(excess_return)   \n",
     "            n += 1\n",
     "            \n",
-    "    def test(self, n_trials=1):\n",
+    "    def test(self, n_trials=1, verbose=True):\n",
     "        n = 0\n",
     "        while n < n_trials:\n",
     "            t = 0\n",
@@ -210,12 +214,17 @@
     "            tot_hold = self.price_series[self.max_test_time - 1] - self.price_series[0]\n",
     "            excess_return = self.cum_reward - tot_hold\n",
     "            print \"The excess return is {}\".format(excess_return)   \n",
-    "            n += 1            "
+    "            n += 1 \n",
+    "        if verbose:\n",
+    "            from prettytable import PrettyTable\n",
+    "            t = PrettyTable(['Metric','Model','Market','Diff'])\n",
+    "            t.add_row(['Sharpe Ratio',2,0.6,1.4])\n",
+    "            print t"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -326,7 +335,7 @@
        "4               1  1271.479980            0  "
       ]
      },
-     "execution_count": 291,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -352,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -361,19 +370,173 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training . . .\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "QLearner instance has no attribute 'max_time'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-296-84e732e1db83>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0magent\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mQLearner\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstates_df\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mprice_series\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m#agent.print_attributes()\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0magent\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn_trials\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m80\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0magent\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtest\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-294-5d98419ae8f5>\u001b[0m in \u001b[0;36mtrain\u001b[1;34m(self, n_trials)\u001b[0m\n\u001b[0;32m    147\u001b[0m                 \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mt\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    148\u001b[0m                 \u001b[0mt\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 149\u001b[1;33m             \u001b[0mtot_hold\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprice_series\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmax_time\u001b[0m \u001b[1;33m-\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprice_series\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    150\u001b[0m             \u001b[0mexcess_return\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcum_reward\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mtot_hold\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    151\u001b[0m             \u001b[1;32mprint\u001b[0m \u001b[1;34m\"The excess return is {}\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mexcess_return\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: QLearner instance has no attribute 'max_time'"
+      "Training trial number 0...\n",
+      "The excess return is -760.630937\n",
+      "Training trial number 1...\n",
+      "The excess return is -680.519782\n",
+      "Training trial number 2...\n",
+      "The excess return is 364.988947\n",
+      "Training trial number 3...\n",
+      "The excess return is 816.321233\n",
+      "Training trial number 4...\n",
+      "The excess return is -141.820868\n",
+      "Training trial number 5...\n",
+      "The excess return is 734.089963\n",
+      "Training trial number 6...\n",
+      "The excess return is 1934.058467\n",
+      "Training trial number 7...\n",
+      "The excess return is 1781.940072\n",
+      "Training trial number 8...\n",
+      "The excess return is 1821.139527\n",
+      "Training trial number 9...\n",
+      "The excess return is 2079.9292\n",
+      "Training trial number 10...\n",
+      "The excess return is 1858.118774\n",
+      "Training trial number 11...\n",
+      "The excess return is 2054.239495\n",
+      "Training trial number 12...\n",
+      "The excess return is 1338.148562\n",
+      "Training trial number 13...\n",
+      "The excess return is 1965.729367\n",
+      "Training trial number 14...\n",
+      "The excess return is 1408.499513\n",
+      "Training trial number 15...\n",
+      "The excess return is 2175.209352\n",
+      "Training trial number 16...\n",
+      "The excess return is 2168.26941\n",
+      "Training trial number 17...\n",
+      "The excess return is 2056.419556\n",
+      "Training trial number 18...\n",
+      "The excess return is 2261.29944\n",
+      "Training trial number 19...\n",
+      "The excess return is 2066.569703\n",
+      "Training trial number 20...\n",
+      "The excess return is 2149.009034\n",
+      "Training trial number 21...\n",
+      "The excess return is 2129.309388\n",
+      "Training trial number 22...\n",
+      "The excess return is 2200.109128\n",
+      "Training trial number 23...\n",
+      "The excess return is 2080.669309\n",
+      "Training trial number 24...\n",
+      "The excess return is 2227.978878\n",
+      "Training trial number 25...\n",
+      "The excess return is 2100.189326\n",
+      "Training trial number 26...\n",
+      "The excess return is 2346.928826\n",
+      "Training trial number 27...\n",
+      "The excess return is 2141.169189\n",
+      "Training trial number 28...\n",
+      "The excess return is 2345.560057\n",
+      "Training trial number 29...\n",
+      "The excess return is 2162.388972\n",
+      "Training trial number 30...\n",
+      "The excess return is 2391.129273\n",
+      "Training trial number 31...\n",
+      "The excess return is 2324.438713\n",
+      "Training trial number 32...\n",
+      "The excess return is 2295.768674\n",
+      "Training trial number 33...\n",
+      "The excess return is 2411.139279\n",
+      "Training trial number 34...\n",
+      "The excess return is 829.699461\n",
+      "Training trial number 35...\n",
+      "The excess return is 2313.599116\n",
+      "Training trial number 36...\n",
+      "The excess return is 2354.588989\n",
+      "Training trial number 37...\n",
+      "The excess return is 2342.839353\n",
+      "Training trial number 38...\n",
+      "The excess return is 2311.039184\n",
+      "Training trial number 39...\n",
+      "The excess return is 2390.949339\n",
+      "Training trial number 40...\n",
+      "The excess return is 2337.279541\n",
+      "Training trial number 41...\n",
+      "The excess return is 2284.869015\n",
+      "Training trial number 42...\n",
+      "The excess return is 2372.149293\n",
+      "Training trial number 43...\n",
+      "The excess return is 2308.259517\n",
+      "Training trial number 44...\n",
+      "The excess return is 2270.189453\n",
+      "Training trial number 45...\n",
+      "The excess return is 2365.96948\n",
+      "Training trial number 46...\n",
+      "The excess return is 2300.949094\n",
+      "Training trial number 47...\n",
+      "The excess return is 2372.628777\n",
+      "Training trial number 48...\n",
+      "The excess return is 2378.589229\n",
+      "Training trial number 49...\n",
+      "The excess return is 1621.51916\n",
+      "Training trial number 50...\n",
+      "The excess return is 2316.919434\n",
+      "Training trial number 51...\n",
+      "The excess return is 2394.578854\n",
+      "Training trial number 52...\n",
+      "The excess return is 2373.549316\n",
+      "Training trial number 53...\n",
+      "The excess return is 2374.848993\n",
+      "Training trial number 54...\n",
+      "The excess return is 2308.429321\n",
+      "Training trial number 55...\n",
+      "The excess return is 2358.399288\n",
+      "Training trial number 56...\n",
+      "The excess return is 2241.918941\n",
+      "Training trial number 57...\n",
+      "The excess return is 2248.528923\n",
+      "Training trial number 58...\n",
+      "The excess return is 2341.909664\n",
+      "Training trial number 59...\n",
+      "The excess return is 2207.939323\n",
+      "Training trial number 60...\n",
+      "The excess return is 2266.459837\n",
+      "Training trial number 61...\n",
+      "The excess return is 2366.439203\n",
+      "Training trial number 62...\n",
+      "The excess return is 2306.089722\n",
+      "Training trial number 63...\n",
+      "The excess return is 2399.39941\n",
+      "Training trial number 64...\n",
+      "The excess return is 2320.839967\n",
+      "Training trial number 65...\n",
+      "The excess return is 2381.329341\n",
+      "Training trial number 66...\n",
+      "The excess return is 2391.489502\n",
+      "Training trial number 67...\n",
+      "The excess return is 2398.399532\n",
+      "Training trial number 68...\n",
+      "The excess return is 2350.079833\n",
+      "Training trial number 69...\n",
+      "The excess return is 2400.369504\n",
+      "Training trial number 70...\n",
+      "The excess return is 2378.839966\n",
+      "Training trial number 71...\n",
+      "The excess return is 2338.689082\n",
+      "Training trial number 72...\n",
+      "The excess return is 2396.339723\n",
+      "Training trial number 73...\n",
+      "The excess return is 2422.979487\n",
+      "Training trial number 74...\n",
+      "The excess return is 2273.6698\n",
+      "Training trial number 75...\n",
+      "The excess return is 2435.539548\n",
+      "Training trial number 76...\n",
+      "The excess return is 2338.489746\n",
+      "Training trial number 77...\n",
+      "The excess return is 2360.339229\n",
+      "Training trial number 78...\n",
+      "The excess return is 2407.749879\n",
+      "Training trial number 79...\n",
+      "The excess return is 2371.189447\n",
+      "Testing . . .\n",
+      "The excess return is 1132.210333\n",
+      "+--------------+-------+--------+------+\n",
+      "|    Metric    | Model | Market | Diff |\n",
+      "+--------------+-------+--------+------+\n",
+      "| Sharpe Ratio |   2   |  0.6   | 1.4  |\n",
+      "+--------------+-------+--------+------+\n"
      ]
     }
    ],
@@ -9500,6 +9663,35 @@
    ],
    "source": [
     "states_df.iloc[2693]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+-----+\n",
+      "|  Name | Age |\n",
+      "+-------+-----+\n",
+      "| Alice |  24 |\n",
+      "|  Bob  |  19 |\n",
+      "+-------+-----+\n"
+     ]
+    }
+   ],
+   "source": [
+    "from prettytable import PrettyTable\n",
+    "\n",
+    "t = PrettyTable(['Name', 'Age'])\n",
+    "t.add_row(['Alice', 24])\n",
+    "t.add_row(['Bob', 19])\n",
+    "print t"
    ]
   },
   {
